  allows any unicode string and returns a utf-8 encoded buffer, just like the
  "s#" code already does.  The "z" code was corrected as well.

- Issue 2801: fix bug in the float.is_integer method where a ValueError
  was sometimes incorrectly raised.

- The --with-toolbox-glue option (and the associated pymactoolbox.h) have been
  removed.

Extension Modules
-----------------

Library
-------

- #2659: Added ``break_on_hyphens`` option to textwrap TextWrapper class.

- Issue #2487: change the semantics of math.ldexp(x, n) when n is too
  large to fit in a C long.  ldexp(x, n) now returns a zero (with
  suitable sign) if n is large and negative; previously, it raised
  OverflowError.

- The ConfigParser module has been renamed to configparser.

- Issue 2865: webbrowser.open() works again in a KDE environment.

- The multifile module has been removed.

- The SocketServer module has been renamed to socketserver.

- Fix the __all__ setting on 'collections' to include UserList and UserString.

- The sre module has been removed.

- The Queue module has been renamed to queue.

- The copy_reg module has been renamed to copyreg.

- The mhlib module has been removed.

- The ihooks module has been removed.

- The fpformat module has been removed.

- The dircache module has been removed.

- The Canvas module has been removed.

- The Decimal module gained the magic methods __round__, __ceil__,
  __floor__ and __trunc__, to give support for round, math.ceil,
  math.floor and math.trunc.

- The user module has been removed.

- The mutex module has been removed.

- The imputil module has been removed.

- os.path.walk has been removed in favor of os.walk

- pdb gained the "until" command.

Build
-----


What's New in Python 3.0a5?
===========================

*Release date: 08-May-2008*

Core and Builtins
-----------------

- Fix misbehaviour of PyLong_FromSsize_t on systems where sizeof(size_t) >
  sizeof(long).
